# learning_cpp

./: .gitignore  CMakeLists.txt
telephone_directory/: Makefile  main
telephone_directory/inc/: person.h
telephone_directory/src/: main.cpp  person.cpp
